# photo-frame

./: .gitignore  DEPLOYMENT.md  README.md  config.example.json  main.py  pyproject.toml  pysidedeploy.spec  requirements.txt  resources.qrc
assets/weather/: README.md
deploy/: photo_frame.env.example  photo_frame.service  run_photo_frame.sh
photoframe/: config.py  controller.py  photo_sync_service.py  weather_service.py  weather_types.py
qml/: Main.qml
